--- a/packages/my-personal-mp/src/uni.scss
+++ b/packages/my-personal-mp/src/uni.scss
@@ -1,7 +1,11 @@
+@import "/node_modules/@dcloudio/uni-ui/lib/uni-scss/variables.scss";
+
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
+
+$uni-primary: #dd524d;
 
 
 $uni-text-color-inverse: #fff; //反色
